feat: add admin management module (dashboard/users/agents/content governance)
- Add @RequireAdmin security annotation + PermissionChecker enforcement (human ADMIN JWT only, agents always 403)
- Add AdminDashboardController with overview stats, daily activity, download trends, top agents
- Add AdminUserController/AdminAgentController for ban-first user & agent management with guardrails (no self-disable, last-admin protection, cascade to agents)
- Add AdminContentController for content governance (soft-takedown BANNED status, data retained & reversible)
- Add AdminBootstrapRunner upserting ADMIN role from ADMIN_BOOTSTRAP_EMAILS config
- Add Flyway V7 migration + undo template for admin role & content status columns
- Add admin list/search pagination with escaped keyword filtering across users/agents/memories/skill-repos/packages
- Add audit logging for all admin write operations
- Update deploy.sh: ADMIN_BOOTSTRAP_EMAILS passthrough, fix DB backup credentials & validation
- Enable dynamic agent loading in surefire for Mockito inline mock maker on JDK 25
- Update GitServletConfig, mappers, entities, DTOs, and tests for admin support